--- a/project/index.html
+++ b/project/index.html
@@ -104,43 +104,92 @@
           <img src="search-663-32.png" alt="">
       </button>
   </div>
-
+ 
   <div class="slider-container">
-  <div class="slider">
-    <div class="slides">
-      <!-- Slide 1 -->
-      <div class="slide">
-        <img src="7041aedaf6ef84212dc4d36c3e641523f9a7aae7.webp" alt="Cooling Solution 1">
+    <div class="slider">
+      <div class="slides">
+        <!-- Slide 1 -->
+        <div class="slide">
+          <img src="7041aedaf6ef84212dc4d36c3e641523f9a7aae7.webp" alt="Cooling Solution 1">
+        </div>
+        <!-- Slide 2 -->
+        <div class="slide">
+          <img src="cb14ea07c488b20e5cc34f036edf698c00f7342c.webp" alt="Cooling Solution 2">
+        </div>
+        <!-- Slide 3 -->
+        <div class="slide">
+          <img src="4677a0cdb4f4b77d2025b3c4549dd77cbc278f91.webp" alt="Cooling Solution 3">
+        </div>
+        <!-- Slide 4 -->
+        <div class="slide">
+          <img src="d0eb8ad43fcd29875feed5379e33f7bff0d9474a.webp" alt="Cooling Solution 4">
+        </div>
+        <!-- Slide 5 -->
+        <div class="slide">
+          <img src="19a5dc08e21be76f7b7c7a805a2989df9bca7c88.webp" alt="Cooling Solution 5">
+        </div>
+        <!-- Slide 6 -->
+        <div class="slide">
+          <img src="c99e78b519e8ce5cdf5840055af081a4f0a9d272.webp" alt="Cooling Solution 6">
+        </div>
       </div>
-      <!-- Slide 2 -->
-      <div class="slide">
-        <img src="cb14ea07c488b20e5cc34f036edf698c00f7342c.webp" alt="Cooling Solution 2">
-      </div>
-      <!-- Slide 3 -->
-      <div class="slide">
-        <img src="4677a0cdb4f4b77d2025b3c4549dd77cbc278f91.webp" alt="Cooling Solution 3">
-      </div>
-      <!-- Slide 4 -->
-      <div class="slide">
-        <img src="d0eb8ad43fcd29875feed5379e33f7bff0d9474a.webp" alt="Cooling Solution 4">
-      </div>
-      <!-- Slide 5 -->
-      <div class="slide">
-        <img src="19a5dc08e21be76f7b7c7a805a2989df9bca7c88.webp" alt="Cooling Solution 5">
-      </div>
-      <!-- Slide 6 -->
-      <div class="slide">
-        <img src="c99e78b519e8ce5cdf5840055af081a4f0a9d272.webp" alt="Cooling Solution 6">
+      <!-- Navigation buttons -->
+      <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+      <button class="next" onclick="moveSlide(1)">&#10095;</button>
+    </div>
+  
+   
+  
+  
+    </div>
+  </div>
+  
+  
+   
+     <ul role="tablist" class="nav nav-tabs ">
+                      <li>
+            <a class="active" aria-expanded="false" href="#computer-systems"  data-toggle="tab">
+             <span class="font-8">i3 სისტემები</span>
+            </a>
+           </li>
+                      <li>
+            <a class="" aria-expanded="false" href="#computer-systems"  data-toggle="tab">
+             <span class="font-8">i5 სისტემები</span>
+            </a>
+           </li>
+                      <li>
+            <a class="" aria-expanded="false" href="#computer-systems"  data-toggle="tab">
+             <span class="font-8">i7 სისტემები</span>
+            </a>
+           </li>
+                      <li>
+            <a class="" aria-expanded="false" href="#computer-systems"  data-toggle="tab">
+             <span class="font-8">i9 სისტემები</span>
+            </a>
+           </li>
+                     </ul>
+         </div>
+        </div>
+
+
+    <div class="product-card">
+      <img src="6ca50d332f93246fc8a95eb3197195f71fb850a2f1fa420df32362b488011c051736154717.png" alt="Product Image" />
+      <div class="product-info">
+        <h5 class="product-name">I3 12100F - RTX 3050 6GB - 16GB RAM - 500GB SSD</h5>
+        <div class="price-section">
+          <span class="current-price">
+            <b class="currency-gel">₾</b>1560
+          </span>
+          <span class="old-price">₾1965</span>
+        </div>
       </div>
     </div>
-    <!-- Navigation buttons -->
-    <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-    <button class="next" onclick="moveSlide(1)">&#10095;</button>
-  </div>
-
-  <script src="script.js"></script>
+    
 
 
+
+
+    <script src="script.js"></script>
 </body>
 </html>
 
