--- a/project/index.html
+++ b/project/index.html
@@ -258,38 +258,38 @@
 
 <div class="catalog">
   <div class="catalog-item">
-      <img src="" alt="Product Image" />
-      <h5>I3 12100F - RTX 3050 6GB - 16GB RAM</h5>
+      <img src="8d59ad4d2814237b0ce3b3f425247c3e476b3eae5c491fa664f6805b57b1df031736154367.png" alt="Product Image" />
+      <h5>I5 14400F - RTX 4060TI 8GB - 16GB DDR5 RAM - 1TB SSD</h5>
       <div class="pricing-info">
-          <span class="price-new">₾1560</span>
-          <span class="price-old">₾1965</span>
+          <span class="price-new">₾2410</span>
+          <span class="price-old">₾2730</span>
       </div>
   </div>
 
   <div class="catalog-item">
-      <img src="" alt="Product Image" />
-      <h5>I3 12100F - RTX 3050 8GB - 16GB RAM</h5>
+      <img src="6ca50d332f93246fc8a95eb3197195f71fb850a2f1fa420df32362b488011c051736154717.png" alt="Product Image" />
+      <h5>I5 12400F - RTX 3050 6GB - 16GB RAM - 500GB SSD</h5>
       <div class="pricing-info">
-          <span class="price-new">₾1690</span>
-          <span class="price-old">₾2190</span>
+          <span class="price-new">₾1620</span>
+          <span class="price-old">₾2130</span>
       </div>
   </div>
 
   <div class="catalog-item">
-      <img src="" alt="Product Image" />
-      <h5>I3 10100F - RTX 3050 6GB - 16GB RAM</h5>
+      <img src="314b0bbca2e5c02ff145cd4b2e8be7f7d9ebfb0bf783b33398f350d7fed080141736153528.png" alt="Product Image" />
+      <h5>I5 12400F - RTX 3050 8GB - 16GB RAM - 500GB SSD</h5>
       <div class="pricing-info">
-          <span class="price-new">₾1470</span>
-          <span class="price-old">₾1845</span>
+          <span class="price-new">₾1755</span>
+          <span class="price-old">₾2290</span>
       </div>
   </div>
 
   <div class="catalog-item">
-      <img src="" alt="Product Image" />
-      <h5>I3 12100F - RTX 3050 8GB - 16GB RAM</h5>
+      <img src="3428f02936f8555ea8b6ce6754f395445bb1f51a7bc7cd82019a42b9792a171d1736154402.png" alt="Product Image" />
+      <h5>I7 12700F - RTX 4060 8GB - SSD - 500GB NVMe - 16GB DDR4 RAM</h5>
       <div class="pricing-info">
-          <span class="price-new">₾1595</span>
-          <span class="price-old">₾1895</span>
+          <span class="price-new">₾2695</span>
+          <span class="price-old">₾3025</span>
       </div>
   </div>
 </div>
