--- a/project/index.html
+++ b/project/index.html
@@ -295,7 +295,50 @@
 </div>
 
        
-        
+<div class="pppi">
+  <span class="font-19"> ბოლოს დამატებულები </span>
+</div> 
+
+
+
+<div class="product-gallery">
+  <div class="store-item">
+      <img src="8d59ad4d2814237b0ce3b3f425247c3e476b3eae5c491fa664f6805b57b1df031736154367.png" alt="Product Image" />
+      <h5></h5>
+      <div class="price-details">
+          <span class="sale-price">₾2410</span>
+          <span class="regular-price">₾2730</span>
+      </div>
+  </div>
+
+  <div class="store-item">
+      <img src="6ca50d332f93246fc8a95eb3197195f71fb850a2f1fa420df32362b488011c051736154717.png" alt="Product Image" />
+      <h5></h5>
+      <div class="price-details">
+          <span class="sale-price">₾1620</span>
+          <span class="regular-price">₾2130</span>
+      </div>
+  </div>
+
+  <div class="store-item">
+      <img src="314b0bbca2e5c02ff145cd4b2e8be7f7d9ebfb0bf783b33398f350d7fed080141736153528.png" alt="Product Image" />
+      <h5></h5>
+      <div class="price-details">
+          <span class="sale-price">₾1755</span>
+          <span class="regular-price">₾2290</span>
+      </div>
+  </div>
+
+  <div class="store-item">
+      <img src="3428f02936f8555ea8b6ce6754f395445bb1f51a7bc7cd82019a42b9792a171d1736154402.png" alt="Product Image" />
+      <h5></h5>
+      <div class="price-details">
+          <span class="sale-price">₾2695</span>
+          <span class="regular-price">₾3025</span>
+      </div>
+  </div>
+</div>
+
 
     <script src="script.js"></script>
 </body>
