--- a/project/index.html
+++ b/project/index.html
@@ -303,8 +303,8 @@
 
 <div class="product-gallery">
   <div class="store-item">
-      <img src="8d59ad4d2814237b0ce3b3f425247c3e476b3eae5c491fa664f6805b57b1df031736154367.png" alt="Product Image" />
-      <h5></h5>
+      <img src="646b5c03e8e8751124c07aae9c8176516104.jpg" alt="Product Image" />
+      <h5>Gigabyte GeForce GTX 1660 OC 6GB</h5>
       <div class="price-details">
           <span class="sale-price">₾2410</span>
           <span class="regular-price">₾2730</span>
@@ -312,8 +312,8 @@
   </div>
 
   <div class="store-item">
-      <img src="6ca50d332f93246fc8a95eb3197195f71fb850a2f1fa420df32362b488011c051736154717.png" alt="Product Image" />
-      <h5></h5>
+      <img src="50a4ef642d518f7549bbe950ebcd53da7419.png" alt="Product Image" />
+      <h5>Gigabyte Z790 Aorus ELITE AX (rev. 1.0) DDR5</h5>
       <div class="price-details">
           <span class="sale-price">₾1620</span>
           <span class="regular-price">₾2130</span>
@@ -321,8 +321,8 @@
   </div>
 
   <div class="store-item">
-      <img src="314b0bbca2e5c02ff145cd4b2e8be7f7d9ebfb0bf783b33398f350d7fed080141736153528.png" alt="Product Image" />
-      <h5></h5>
+      <img src="f4f6ef44ebe7bda99154736a02476a699cc8f93c7e997293b8aec03d2138564d1733495965.jpg" alt="Product Image" />
+      <h5>Gigabyte Z790 Aorus Elite AX (rev. 1.0)</h5>
       <div class="price-details">
           <span class="sale-price">₾1755</span>
           <span class="regular-price">₾2290</span>
@@ -330,14 +330,20 @@
   </div>
 
   <div class="store-item">
-      <img src="3428f02936f8555ea8b6ce6754f395445bb1f51a7bc7cd82019a42b9792a171d1736154402.png" alt="Product Image" />
-      <h5></h5>
+      <img src="87e4f6f45a06485348f638a41c4bf0866640.jpg" alt="Product Image" />
+      <h5>AOC 24G2ZU/BK 23,8" FHD 240Hz / IPS / 0,5ms / Freesync Premium (black) 23,8" / 1920x1080</h5>
       <div class="price-details">
           <span class="sale-price">₾2695</span>
           <span class="regular-price">₾3025</span>
       </div>
   </div>
 </div>
+
+
+<div class="pppo">
+  <span class="font-20"> SSD-HDD ყუთები & ადაპტერები </span>
+</div> 
+
 
 
     <script src="script.js"></script>
