--- a/project/index.html
+++ b/project/index.html
@@ -384,6 +384,22 @@
 
 
 
+<div class="pppe">
+  <span class="font-21"> </span>
+</div> 
+
+
+
+<div class="logo-wrapper">
+  <div class="logo-item"><img src="razer.png" alt="Razer"></div>
+  <div class="logo-item"><img src="teamgroup.png" alt="Team Group"></div>
+  <div class="logo-item"><img src="hyperx.png" alt="HyperX"></div>
+  <div class="logo-item"><img src="kingston.png" alt="Kingston"></div>
+  <div class="logo-item"><img src="evga.png" alt="EVGA"></div>
+  <div class="logo-item"><img src="xpg.png" alt="XPG"></div>
+</div>
+
+
 
 
 
