--- a/project/index.html
+++ b/project/index.html
@@ -401,7 +401,21 @@
 
 
 
-
+<div class="footer-container">
+  <ul class="footer-links">
+    <li>წესები და პირობები</li>
+    <li>კონფიდენციალობის პოლიტიკა</li>
+    <li>გარანტია-დაბრუნების პოლიტიკა</li>
+    <li>განვადება</li>
+    <li>ბლოგი</li>
+  </ul>
+  <div class="footer-right">
+    <img src="VISA-logo-768x432.png" alt="Visa">
+    <img src="mastercard-12-32.png" alt="Mastercard">
+    <img src="top-ge-logo.png" alt="TOP.GE">
+  </div>
+  <div class="footer-copy">ITWorks © 2025 ყველა უფლება დაცულია</div>
+</div>
 
 
 
