--- a/project/authorization.html
+++ b/project/authorization.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authorization</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="authorization.css">
 </head>
 <body>
     <div class="info-bar">
@@ -123,5 +124,34 @@
             <img src="search-663-32.png" alt="">
         </button>
     </div>
+
+
+
+
+
+    <div class="login-modal">
+
+        <div class="social-login">
+          <button class="facebook-login">ავტორიზაცია Facebook</button>
+          <button class="gmail-login">ავტორიზაცია Gmail</button>
+        </div>
+        <form class="login-form">
+          <label for="email">ელ. ფოსტა</label>
+          <input type="email" id="email" placeholder="შეიყვანეთ ელ. ფოსტა">
+          <label for="password">პაროლი</label>
+          <input type="password" id="password" placeholder="შეიყვანეთ პაროლი">
+          <div class="checkbox-container">
+            <input type="checkbox" id="remember">
+            <label for="remember">დამახსოვრება</label>
+          </div>
+          <button class="login-btn">ავტორიზაცია</button>
+          <button class="guest-btn">პაროლის აღდგენა</button>
+        </form>
+      </div>
+      
+
+
+
+
 </body>
 </html>
