--- a/project/authorization.html
+++ b/project/authorization.html
@@ -137,7 +137,7 @@
         </div>
         <form class="login-form">
           <label for="email">ელ. ფოსტა</label>
-          <input type="email" id="email" placeholder="შეიყვანეთ ელ. ფოსტა">
+          <input type="" id="email" placeholder="შეიყვანეთ ელ. ფოსტა">
           <label for="password">პაროლი</label>
           <input type="password" id="password" placeholder="შეიყვანეთ პაროლი">
           <div class="checkbox-container">
@@ -151,6 +151,27 @@
       
 
 
+
+
+
+
+
+
+      <div class="footer-container">
+        <ul class="footer-links">
+          <li>წესები და პირობები</li>
+          <li>კონფიდენციალობის პოლიტიკა</li>
+          <li>გარანტია-დაბრუნების პოლიტიკა</li>
+          <li>განვადება</li>
+          <li>ბლოგი</li>
+        </ul>
+        <div class="footer-right">
+          <img src="VISA-logo-768x432.png" alt="Visa">
+          <img src="mastercard-12-32.png" alt="Mastercard">
+          
+        </div>
+        <div class="footer-copy">ITWorks © 2025 ყველა უფლება დაცულია</div>
+      </div>
 
 
 </body>
