--- a/project/authorization.html
+++ b/project/authorization.html
@@ -92,7 +92,7 @@
     
               <li class="nav-item">
                 <a class="nav-link" href="about.html" >
-                 <img src="lock-313-32.png" alt="">
+                 <img src="about-us-21-32.png" alt="">
                  <span class="menu-title font-6">ჩვენ შესახებ</span>
                 </a>
                </li>
