--- a/project/registration.html
+++ b/project/registration.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="registration.css">
 </head>
 <body>
@@ -121,6 +122,49 @@
                 <img src="search-663-32.png" alt="">
             </button>
         </div>
+
+
+        <div class="login-modal">
+
+            <div class="social-login">
+              <button class="facebook-login">ავტორიზაცია Facebook</button>
+              <button class="gmail-login">ავტორიზაცია Gmail</button>
+            </div>
+            <form class="login-form">
+              <label for="email">ელ. ფოსტა</label>
+              <input type="" id="email" placeholder="">
+
+              <label for="password">პაროლი</label>
+              <input type="password" id="password" placeholder="">
+
+              <label for="password">დაადასტურეთ პაროლი</label>
+              <input type="password" id="" placeholder="">
+
+              <label for="registration-date">რეგისტრაციის თარიღი</label>
+              <input type="date" id="">
+
+              <label for="username">მომხმარებლის სახელი</label>
+              <input type="" id="" placeholder="">
+
+              <label for="country">ქვეყანა</label>
+              <input type="text" id="" placeholder="">
+
+              <label for="city">ქალაქი</label>
+              <input type="" id="" placeholder="">
+
+              <label for="mobile number">მობილურის ნომერი</label>
+              <input type="tel" id="" placeholder="">
+
+              <div class="checkbox-container">
+                <input type="checkbox" id="remember">
+                <label for="remember">დამახსოვრება</label>
+              </div>
+
+              <button class="login-btn">ავტორიზაცია</button>
+              <button class="guest-btn">პაროლის აღდგენა</button>
+            </form>
+          </div>
+          
 
 
     
