--- a/project/index.html
+++ b/project/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Works</title>
-    <link rel="stylesheet" href="style.css">
-   
+    <link rel="stylesheet" href="style.css"> 
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
 </head>
 <body>
   <script src="script.js"></script>
+
+
+  <div class="cookie-consent">
+    <div class="cookie-header">
+        <i class='bx bx-cookie'></i>
+        <h2>Cookies Consent</h2>
+    </div>
+    <div class="cookie-data">
+        <p>This website uses cookies to help you have a superior and more relevant browsing experience on the website. <a href="#">Read more...</a></p>
+    </div>
+    <div class="cookie-buttons">
+        <button class="cookie-button accept">Accept</button>
+        <button class="cookie-button decline">Decline</button>
+    </div>
+</div>
 
     <div class="info-bar">
       <div class="info-item">
@@ -32,7 +47,6 @@
           <span>უფასო მიწოდება 500ლ + შენაძენზე</span>
       </div>
   </div>
-
   
 
 <header id="header">
@@ -419,7 +433,9 @@
 
 
 
-  
+
+
+
 
 <div class="footer-container">
   <ul class="footer-links">
