--- a/project/index.html
+++ b/project/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-  <script src="script.js"></script>
-
-
+  <script src="script.js" ></script>
   
+
+
+ 
 
     <div class="info-bar">
       <div class="info-item">
@@ -420,10 +421,6 @@
 
 
 
-
-
-
-
 <div class="footer-container">
   <ul class="footer-links">
     <li>წესები და პირობები</li>
@@ -440,6 +437,23 @@
   <div class="footer-copy">ITWorks © 2025 ყველა უფლება დაცულია</div>
 </div>
 
+<div class="wrapper">
+  <header>
+    <i class="bx bx-cookie"></i>
+     <img src="christmas-cookies-1-48.png" alt="">
+  </header>
+
+  <div class="data">
+    <p>
+      ეს ვებსაიტი იყენებს ქუქი-ფაილებს, რათა დაგეხმაროთ გქონდეთ უმაღლესი და შესაბამისი გამოცდილება. <a href="about.html"> მეტი...</a></p>
+  </div>
+
+  <div class="buttons">
+    <button class="button" id="acceptBtn">ვეთანხმები</button>
+    <button class="button" id="declineBtn">არ ვეთანხმები</button>
+  </div>
+</div>
+<script src="cookies.js" defer></script>
 
 </body>
 </html>
