--- a/project/about.html
+++ b/project/about.html
@@ -126,7 +126,7 @@
         <div class="section">
             <h2>ჩვენ შესახებ</h2>
    <p>
-  ვებგვერდი  <a href="https://www.itworks.ge" target="_blank">www.itworks.ge</a> ეკუთვნის შპს “აითი ვორქსს“ (ს/ნ - 431179887). ვებგვერდზე რეგისტრაციით, 
+  ვებგვერდი  <a href="https://www.itworks.ge" >www.itworks.ge</a> ეკუთვნის შპს “აითი ვორქსს“ (ს/ნ - 431179887). ვებგვერდზე რეგისტრაციით, 
   თქვენ  ადასტურებთ რომ გაეცანით და ეთანხმებით შპს „აითი ვორქსის“ მიერ დადგენილ წესებსა და პირობებს. 
   შეკვეთის განხორციელების შემდეგ შპს“აითი ვორქსის“ მხრიდან ხდება შეკვეთაში მოთხოვნილი დეტალების მარაგის გადამოწმება, 
   გადამოწმების შემდეგ თქვენი შეკვეთების გვერდიდან შეძლებთ ანგარიშსწორებას თქვენი შერჩეული გადახდის
