--- a/project/index.html
+++ b/project/index.html
@@ -166,7 +166,7 @@
   
   
    
-     <ul role="tablist" class="nav nav-tabs ">
+     <ul  class="nav nav-tabs ">
                       <li>
             <a class="active"  >
              <span class="font-8">i3 სისტემები</span>
